fixing bisnoni page

--- a/music.html
+++ b/music.html
@@ -28,7 +28,9 @@
     
     <p>booking: <a href="mailto:derektorsani@gmail.com" target="_blank">derektorsani@gmail.com</a></p>
 
-    <p><a href="https://instagram.com/derektorsanimusic" target="_blank">follow on instagram</a></p>
+    <p>
+        <a href="https://instagram.com/derektorsanimusic" aria-label="Follow on Instagram in a new tab." target="_blank">follow on instagram</a>, <a href="https://elasticstage.com/derektorsani" aria-label="Purchase vinyl by Derek Torsani in a new tab." target="_blank">purchase vinyl</a>
+    </p>
 
     <h2>chronological discography _</h2>
 
@@ -87,13 +89,13 @@
         </div>
     </div>
 
-    <iframe src="https://open.spotify.com/album/3jnN7TtwcenCxq1a9ITkxK?si=uTc9DH9vT1-KkYBuEg3pjg" width="100%" height="450" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <iframe src="https://open.spotify.com/embed/album/3jnN7TtwcenCxq1a9ITkxK" width="100%" height="450" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     <div>
         <h3>derek torsani, seeds, 2021</h3>
         <h4>keys, piano, bass, drones, composition, production</h4>
         <div class="link-group">
             <p>
-                <a href="https://derektorsani.bandcamp.com/album/seeds" target="_blank" title="Bandcamp" aria-label="Listen to Seeds by Derek Torsani on Bandcamp in a new tab.">bandcamp</a>, <a href="https://open.spotify.com/album/3jnN7TtwcenCxq1a9ITkxK?si=uTc9DH9vT1-KkYBuEg3pjg" target="_blank" title="Spotify" aria-label="Listen to Seeds by Derek Torsani on Spotify in a new tab.">spotify</a>, <a href="https://music.apple.com/us/album/seeds-feat-francese-brooks-matthew-bebout/1821169830" target="_blank" title="Apple Music" aria-label="Listen to Seeds by Derek Torsani on Apple Music in a new tab.">apple music</a>, <a href="https://tidal.com/browse/album/442638209" target="_blank" title="Tidal" aria-label="Listen to Seeds by Derek Torsani on Tidal in a new tab.">tidal</a>, <a href="https://music.youtube.com/playlist?list=OLAK5uy_n38NlV1M2fTVzV7nIPcdHaSPJL-lGJ7mY&si=dZbPmK6LUSHVGzFI" target="_blank" title="YouTube Music" aria-label="Listen to Seeds by Derek Torsani on YouTube Music in a new tab.">youtube music</a>, <a href="https://music.amazon.com/albums/B0FDGMCMN2" target="_blank" title="Amazon Music" aria-label="Listen to Seeds by Derek Torsani on Amazon Music in a new tab.">amazon music</a>
+                <a href="https://elasticstage.com/derektorsani/releases/seeds-album" target="_blank" title="Vinyl" aria-label="Purchase Seeds by Derek Torsani on vinyl in a new tab.">vinyl</a>, <a href="https://derektorsani.bandcamp.com/album/seeds" target="_blank" title="Bandcamp" aria-label="Listen to Seeds by Derek Torsani on Bandcamp in a new tab.">bandcamp</a>, <a href="https://open.spotify.com/album/3jnN7TtwcenCxq1a9ITkxK?si=uTc9DH9vT1-KkYBuEg3pjg" target="_blank" title="Spotify" aria-label="Listen to Seeds by Derek Torsani on Spotify in a new tab.">spotify</a>, <a href="https://music.apple.com/us/album/seeds-feat-francese-brooks-matthew-bebout/1821169830" target="_blank" title="Apple Music" aria-label="Listen to Seeds by Derek Torsani on Apple Music in a new tab.">apple music</a>, <a href="https://tidal.com/browse/album/442638209" target="_blank" title="Tidal" aria-label="Listen to Seeds by Derek Torsani on Tidal in a new tab.">tidal</a>, <a href="https://music.youtube.com/playlist?list=OLAK5uy_n38NlV1M2fTVzV7nIPcdHaSPJL-lGJ7mY&si=dZbPmK6LUSHVGzFI" target="_blank" title="YouTube Music" aria-label="Listen to Seeds by Derek Torsani on YouTube Music in a new tab.">youtube music</a>, <a href="https://music.amazon.com/albums/B0FDGMCMN2" target="_blank" title="Amazon Music" aria-label="Listen to Seeds by Derek Torsani on Amazon Music in a new tab.">amazon music</a>
             </p>
         </div>
     </div>
