--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </li>
         <li>
             fantastical quest for belonging in two parts — book and album,
-            (a tree like me)
+            (<a href="https://atreelikeme.com" target="_blank" title="A Tree Like Me" aria-label="Open A Tree Like Me in a new tab.">a tree like me</a>)
         </li>
     </ul>
 
@@ -167,6 +167,8 @@
         </li>
     </ul>
 
+    <p><a href="https://medium.com/@dmtors" target="_blank" title="Medium" aria-label="Visit Derek Torsani on Medium in a new tab.">more writing</a></p>
+
     <h2>playlists (spotify) _</h2>
 
     <ul>
@@ -184,7 +186,7 @@
         </li>
         <li>
             90s rock,
-            (<a href="https://open.spotify.com/playlist/2dlyJVQr2FK8UUnLCOH2pZ?si=a0e6a8858699435e" target="_blank" title="Claire's Again?" aria-label="Listen to Claire's Again? in Spotify.">claire's again?</a>)
+            (<a href="https://open.spotify.com/playlist/2dlyJVQr2FK8UUnLCOH2pZ?si=a0e6a8858699435e" target="_blank" title="Claire's" aria-label="Listen to Claire's in Spotify.">claire's</a>)
         </li>
         <li>
             sounds of reflection,
