--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <ul>
         <li>
-            invite-only, popup italian dinner in baltimore,
+            popup street pizzeria in baltimore,
             (<a href="bisnoni.html" target="_blank" title="Bisnoni" aria-label="Open Bisnoni in a new tab.">bisnoni</a>)
         </li>
         <li>
