--- a/bisnoni.html
+++ b/bisnoni.html
@@ -12,146 +12,23 @@
     <title>bisnoni</title>
 </head>
 
-<body>
+<body id="bisnoni">
 
     <script src='as-dithered-image.js'></script>
 
     <as-dithered-image id="bisnoni-image" src="bisnoni.png" crunch="1"></as-dithered-image>
 
-    <div class="button-group">
-        <button onclick="switchLanguage('en')">
-            <svg width="24" height="16" viewBox="0 0 24 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <g clip-path="url(#clip0_1521_122)">
-                    <path d="M0 0H24V16H0V0Z" fill="white"/>
-                    <path d="M0 0H24V1.23041H0V0ZM0 2.46082H24V3.69123H0V2.46082ZM0 4.92164H24V6.15205H0V4.92164ZM0 7.38246H24V8.61287H0V7.38246ZM0 9.84795H24V11.0784H0V9.84795ZM0 12.3088H24V13.5392H0V12.3088ZM0 14.7696H24V16H0V14.7696Z" fill="#D80027"/>
-                    <path d="M0 0H12V8.61287H0V0Z" fill="#2E52B2"/>
-                    <path d="M2.23709 6.49821L2.04995 5.89938L1.84411 6.49821H1.22656L1.72715 6.85844L1.54001 7.45727L2.04995 7.08768L2.54586 7.45727L2.35405 6.85844L2.86399 6.49821H2.23709ZM4.87101 6.49821L4.67919 5.89938L4.4827 6.49821H3.86516L4.36574 6.85844L4.17861 7.45727L4.67919 7.08768L5.18446 7.45727L4.99732 6.85844L5.49791 6.49821H4.87101ZM7.51428 6.49821L7.31311 5.89938L7.12598 6.49821H6.4944L7.00902 6.85844L6.81253 7.45727L7.31311 7.08768L7.82773 7.45727L7.63124 6.85844L8.13182 6.49821H7.51428ZM10.1435 6.49821L9.95639 5.89938L9.75989 6.49821H9.13767L9.64294 6.85844L9.4558 7.45727L9.95639 7.08768L10.4616 7.45727L10.2605 6.85844L10.7751 6.49821H10.1435ZM4.67919 3.52277L4.4827 4.1216H3.86516L4.36574 4.49119L4.17861 5.08066L4.67919 4.71575L5.18446 5.08066L4.99732 4.49119L5.49791 4.1216H4.87101L4.67919 3.52277ZM2.04995 3.52277L1.84411 4.1216H1.22656L1.72715 4.49119L1.54001 5.08066L2.04995 4.71575L2.54586 5.08066L2.35405 4.49119L2.86399 4.1216H2.23709L2.04995 3.52277ZM7.31311 3.52277L7.12598 4.1216H6.4944L7.00902 4.49119L6.81253 5.08066L7.31311 4.71575L7.82773 5.08066L7.63124 4.49119L8.13182 4.1216H7.51428L7.31311 3.52277ZM9.95639 3.52277L9.75989 4.1216H9.13767L9.64294 4.49119L9.4558 5.08066L9.95639 4.71575L10.4616 5.08066L10.2605 4.49119L10.7751 4.1216H10.1435L9.95639 3.52277ZM2.04995 1.15552L1.84411 1.74499H1.22656L1.72715 2.11458L1.54001 2.70873L2.04995 2.33914L2.54586 2.70873L2.35405 2.11458L2.86399 1.74499H2.23709L2.04995 1.15552ZM4.67919 1.15552L4.4827 1.74499H3.86516L4.36574 2.11458L4.17861 2.70873L4.67919 2.33914L5.18446 2.70873L4.99732 2.11458L5.49791 1.74499H4.87101L4.67919 1.15552ZM7.31311 1.15552L7.12598 1.74499H6.4944L7.00902 2.11458L6.81253 2.70873L7.31311 2.33914L7.82773 2.70873L7.63124 2.11458L8.13182 1.74499H7.51428L7.31311 1.15552ZM9.95639 1.15552L9.75989 1.74499H9.13767L9.64294 2.11458L9.4558 2.70873L9.95639 2.33914L10.4616 2.70873L10.2605 2.11458L10.7751 1.74499H10.1435L9.95639 1.15552Z" fill="white"/>
-                </g>
-            </svg>                    
-        </button>
-        <button onclick="switchLanguage('it')">
-            <svg width="24" height="16" viewBox="0 0 24 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <g>
-                    <path d="M13.3333 0H8V16H16V0H13.3333Z" fill="white"/>
-                    <path d="M0 0H8V16.0002H0V0Z" fill="#6DA544"/>
-                    <path d="M16 0H24V16.0002H16V0Z" fill="#D80027"/>
-                </g>
-            </svg>                                        
-        </button>
-    </div>
+    <h1>bisnoni</h1>
 
-    <div id="content-en">
-        <p>welcome to bisnoni, an invite-only, popup italian restaurant in baltimore. <u>everything</u> is made fresh for each service.</p>
-        <p>“no notes” • “you’ve perfected your sauce” • “brings me back to italy”</p>
-        <p><u>menu</u></p>
-        <div>
-            <p>rosemary focaccia</p>
-            <div class="inline-text-group">
-                <p>—</p><p>extra virgin olive oil, rosemary, sea salt</p>
-            </div>
-        </div>
-        <div>
-            <p>bianchini beans</p>
-            <div class="inline-text-group">
-                <p>—</p><p>cannellini beans, roasted garlic, lemon juice and zest, extra virgin olive oil, rosemary, sea salt, black pepper, pepper flakes, parmigiano reggiano</p>
-            </div>
-        </div>
-        <div>
-            <p>mixed salad</p>
-            <div class="inline-text-group">
-                <p>—</p><p>arugula, sea salt, black pepper, pepper flakes, lemon zest, parmigiano reggiano, extra virgin olive oil, balsamic vinegar</p>
-            </div>
-        </div>
-        <div>
-            <p>grilled zucchini and eggplant</p>
-            <div class="inline-text-group">
-                <p>—</p><p>zucchini, eggplant, oregano, sea salt, black pepper</p>
-            </div>
-        </div>
-        <div>
-            <p>trofie with pesto</p>
-            <div class="inline-text-group">
-                <p>—</p><p>trofie, zucchini almond pesto, black pepper, extra virgin olive oil</p>
-            </div>
-        </div>
-        <div>
-            <p>gnocchi with marinara</p>
-            <div class="inline-text-group">
-                <p>—</p><p>ricotta gnocchi, marinara, parmigiano reggiano, extra virgin olive oil</p>
-            </div>
-        </div>
-        <div>
-            <p>citrus pignoli</p>
-            <div class="inline-text-group">
-                <p>—</p><p>almond, pine nuts, lemon and orange zest</p>
-            </div>
-        </div>
-        <p>to receive an invite or to host bisnoni, send me an <a href="mailto: derektorsani@gmail.com">email</a>.</p>
-    </div>
+    <h2>pizza fritta / fried pizza</h2>
 
-    <div id="content-it" class="hidden">
-        <p>benvenuto a bisnoni, un ristorante italiano popup solo su invito a baltimora. <u>tutto</u> è reso fresco ogni servizio.</p>
-        <p>“nessuna nota” • “hai perfezionato il tuo sugo” • “mi riporta in italia"</p>
-        <p><u>menu</u></p>
-        <div>
-            <p>focaccia al rosmarino</p>
-            <div class="inline-text-group">
-                <p>—</p><p>olio extra vergine di oliva, sulla focaccia al rosmarino, sale de mare</p>
-            </div>
-        </div>
-        <div>
-            <p>fagioli bianchini</p>
-            <div class="inline-text-group">
-                <p>—</p><p>fagioli cannellini, aglio arrostito, succo e scorza di limone, olio extra vergine di oliva, rosemarino, sale de mare, pepe nero, scaglie di pepe, parmigiano reggiano</p>
-            </div>
-        </div>
-        <div>
-            <p>insalata mista</p>
-            <div class="inline-text-group">
-                <p>—</p><p>rocket, sale de mare, pepe nero, scaglie di pepe, scorza di limone, parmigiano reggiano, olio extra vergine di oliva, aceto balsamico</p>
-            </div>
-        </div>
-        <div>
-            <p>zucchine e melanzane grigliate</p>
-            <div class="inline-text-group">
-                <p>—</p><p>zucchine, melanzane, oregano, sale de mare, pepe nero</p>
-            </div>
-        </div>
-        <div>
-            <p>trofie con pesto</p>
-            <div class="inline-text-group">
-                <p>—</p><p>trofie, pesto di zucchine é mandorla, pepe nero, olio extra vergine di oliva</p>
-            </div>
-        </div>
-        <div>
-            <p>gnocchi con marinara</p>
-            <div class="inline-text-group">
-                <p>—</p><p>ricotta gnocchi, marinara, parmigiano reggiano, olio extra vergine di oliva</p>
-            </div>
-        </div>
-        <div>
-            <p>pignoli agli agrumi</p>
-            <div class="inline-text-group">
-                <p>—</p><p>mandorla, pinoli, scorza di limone e arancia</p>
-            </div>
-        </div>
-        <p>per ricevere un invito o per ospitare bisnoni, mandami una <a href="mailto: derektorsani@gmail.com">email</a>.</p>
-    </div>
+    <p>ricetta di famiglia / family recipes</p>
 
-    <script>
-        function switchLanguage(lang) {
-            const english = document.getElementById('content-en');
-            const spanish = document.getElementById('content-it');
+    <p>con sugo / with sauce $7</p>
 
-            if (lang === 'en') {
-                english.classList.remove('hidden');
-                spanish.classList.add('hidden');
-            } else if (lang === 'it') {
-                english.classList.add('hidden');
-                spanish.classList.remove('hidden');
-            }
-        }
-    </script>
+    <p>con zucchero / with sugar $4</p>
+
+    <span style="text-align: center;"><u>everything</u> is made fresh for each service.</span>
 
 </body>
 
