--- a/bisnoni.html
+++ b/bisnoni.html
@@ -18,15 +18,15 @@
 
     <as-dithered-image id="bisnoni-image" src="bisnoni.png" crunch="1"></as-dithered-image>
 
-    <h1>bisnoni</h1>
+    <h1 style="text-align: center;">bisnoni</h1>
 
-    <h2>pizza fritta / fried pizza</h2>
+    <h2 style="text-align: center;">pizza fritta / fried pizza</h2>
 
-    <p>ricetta di famiglia / family recipes</p>
+    <h3 style="text-align: center;">ricetta di famiglia / family recipes</h3>
 
-    <p>con sugo / with sauce $7</p>
+    <h3 style="text-align: center;">con sugo / with sauce $7</h3>
 
-    <p>con zucchero / with sugar $4</p>
+    <h3 style="text-align: center;">con zucchero / with sugar $4</h3>
 
     <span style="text-align: center;"><u>everything</u> is made fresh for each service.</span>
 
