--- a/index.html
+++ b/index.html
@@ -62,22 +62,29 @@
     <ul>
         <li>
             seeds, ambient jazz, 2021
-            (<a href="https://elasticstage.com/derektorsani/releases/seeds-album" target="_blank" title="Vinyl" aria-label="Purchase Seeds by Derek Torsani on vinyl in a new tab.">vinyl</a>, <a href="https://derektorsani.bandcamp.com/album/seeds" target="_blank" title="Bandcamp" aria-label="Listen to Seeds by Derek Torsani on Bandcamp in a new tab.">bandcamp</a>, <a href="https://open.spotify.com/album/3jnN7TtwcenCxq1a9ITkxK?si=uTc9DH9vT1-KkYBuEg3pjg" target="_blank" title="Spotify" aria-label="Listen to Seeds by Derek Torsani on Spotify in a new tab.">spotify</a>, <a href="https://music.apple.com/us/album/seeds-feat-francese-brooks-matthew-bebout/1821169830" target="_blank" title="Apple Music" aria-label="Listen to Seeds by Derek Torsani on Apple Music in a new tab.">apple music</a>, <a href="https://tidal.com/browse/album/442638209" target="_blank" title="Tidal" aria-label="Listen to Seeds by Derek Torsani on Tidal in a new tab.">tidal</a>, <a href="https://music.youtube.com/playlist?list=OLAK5uy_n38NlV1M2fTVzV7nIPcdHaSPJL-lGJ7mY&si=dZbPmK6LUSHVGzFI" target="_blank" title="YouTube Music" aria-label="Listen to Seeds by Derek Torsani on YouTube Music in a new tab.">youtube music</a>, <a href="https://music.amazon.com/albums/B0FDGMCMN2" target="_blank" title="Amazon Music" aria-label="Listen to Seeds by Derek Torsani on Amazon Music in a new tab.">amazon music</a>)</li>
+            <iframe src="https://bandcamp.com/EmbeddedPlayer/album=1048797745/size=large/bgcol=ffffff/linkcol=000000/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://derektorsani.bandcamp.com/album/seeds">Seeds by Derek Torsani</a></iframe>
+        </li>
         <li>
             new life, intermission, contemporary rnb, 2022
-            (<a href="https://open.spotify.com/album/3AuUvPQDc22u7VKZSEk7Mf?si=foFoIdE4TnCD8QhJM8OyzA" target="_blank" title="Spotify" aria-label="Listen to New Life by Intermission on Spotify in a new tab.">spotify</a>, <a href="https://music.apple.com/us/album/new-life/1654687366" target="_blank" title="Apple Music" aria-label="Listen to New Life by Intermission on Apple Music in a new tab.">apple music</a>, <a href="https://tidal.com/browse/album/260878519" target="_blank" title="Tidal" aria-label="Listen to New Life by Intermission on Tidal in a new tab.">tidal</a>, <a href="https://music.youtube.com/playlist?list=OLAK5uy_lZerQOrhmqXIJxdbmDWouy0fkDtyqovcA&feature=share" target="_blank" title="YouTube Music" aria-label="Listen to New Life by Intermission on YouTube Music in a new tab.">youtube music</a>, <a href="https://music.amazon.com/albums/B0BMK2QKC4" target="_blank" title="Amazon Music" aria-label="Listen to New Life by Intermission on Amazon Music in a new tab.">amazon music</a>)
+            <iframe src="https://bandcamp.com/EmbeddedPlayer/album=3613508620/size=large/bgcol=ffffff/linkcol=000000/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://derektorsani.bandcamp.com/album/new-life">New Life by Intermission</a></iframe>
         </li>
         <li>
             say their names, protest jazz, 2022
-            (<a href="https://derektorsani.bandcamp.com/album/say-their-names" target="_blank" title="Bandcamp" aria-label="Listen to Say Their Names by Derek Torsani on Bandcamp in a new tab.">bandcamp</a>, <a href="https://open.spotify.com/album/6wuFeJtukTHBtHYihk2TlA?si=DF6EuAm8RRmOHq6Mxb8iEQ" target="_blank" title="Spotify" aria-label="Listen to Say Their Names by Derek Torsani on Spotify in a new tab.">spotify</a>, <a href="https://music.apple.com/us/album/say-their-names-ep/1656951004" target="_blank" title="Apple Music" aria-label="Listen to Say Their Names by Derek Torsani on Apple Music in a new tab.">apple music</a>, <a href="https://tidal.com/browse/album/263761313" target="_blank" title="Tidal" aria-label="Listen to Say Their Names by Derek Torsani on Tidal in a new tab.">tidal</a>, <a href="https://music.youtube.com/playlist?list=OLAK5uy_n1kF7MYeyEpErkqAug79Dytz94a5NgLs8&feature=share" target="_blank" title="YouTube Music" aria-label="Listen to Say Their Names by Derek Torsani on YouTube Music in a new tab.">youtube music</a>, <a href="https://music.amazon.com/albums/B0BNLKG7VV" target="_blank" title="Amazon Music" aria-label="Listen to Say Their Names by Derek Torsani on Amazon Music in a new tab.">amazon music</a>, <a href="https://soundcloud.com/derektorsani/sets/say-their-names" target="_blank" title="SoundCloud" aria-label="Listen to Say Their Names by Derek Torsani on SoundCloud in a new tab.">soundcloud</a>)
+            <iframe src="https://bandcamp.com/EmbeddedPlayer/album=1532270145/size=large/bgcol=ffffff/linkcol=000000/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://derektorsani.bandcamp.com/album/say-their-names">Say Their Names by Derek Torsani</a></iframe>
         </li>
         <li>
             ghost, alternative, 2021
-            (<a href="https://derektorsani.bandcamp.com/track/ghost-with-casey-reed" target="_blank" title="Bandcamp" aria-label="Listen to Ghost by Derek Torsani on Bandcamp in a new tab.">bandcamp</a>, <a href="https://open.spotify.com/album/7enBUZl5guEfCCGynLN82P?si=TiaZHv6mQra-OKTMW1piNg" target="_blank" title="Spotify" aria-label="Listen to Ghost by Derek Torsani on Spotify in a new tab.">spotify</a>, <a href="https://music.apple.com/us/album/ghost-feat-casey-reed-single/1750429683" target="_blank" title="Apple Music" aria-label="Listen to Ghost by Derek Torsani on Apple Music in a new tab.">apple music</a>, <a href="https://tidal.com/browse/album/367466205" target="_blank" title="Tidal" aria-label="Listen to Ghost by Derek Torsani on Tidal in a new tab.">tidal</a>, <a href="https://music.youtube.com/playlist?list=OLAK5uy_lZVwKXujNMtYpX92IcT1YSdeoEZQukQEs&si=oDtVp2uGf-iymKYO" target="_blank" title="YouTube Music" aria-label="Listen to Ghost by Derek Torsani on YouTube Music in a new tab.">youtube music</a>, <a href="https://music.amazon.com/albums/B0D663ZRF6" target="_blank" title="Amazon Music" aria-label="Listen to Ghost by Derek Torsani on Amazon Music in a new tab.">amazon music</a>)
+            <iframe src="https://bandcamp.com/EmbeddedPlayer/track=2220108366/size=large/bgcol=ffffff/linkcol=000000/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://derektorsani.bandcamp.com/track/ghost-with-casey-reed">Ghost ( with Casey Reed ) by Derek Torsani</a></iframe>
         </li>
     </ul>
 
-    <p><a href="music.html">all discography</a></p>
+    <p>other music credits:</p>
+    <ul>
+        <li>prjct untld, home cooking, bass, 2022</li>
+        <li>sweet teej, bass, 2018–2022</li>
+        <li>rudder north, acoustic guitar, percussion, mandolin, harmonica, composition, production, 2009–2012</li>
+        <li>for better for worse, electric guitar, composition, 2006–2008</li>
+    </ul>
 
     <h2>design + media _</h2>
 
@@ -142,6 +149,8 @@
         </li>
     </ul>
 
+    <p><a href="https://medium.com/@dmtors" target="_blank" title="Medium" aria-label="Visit Derek Torsani on Medium in a new tab.">more writing</a></p>
+
     <h2>tools _</h2>
 
     <ul>
@@ -166,8 +175,6 @@
             (<a href="https://calabash.notion.site/cb5ad07b2ea34cfc82eeba749794f078?v=209e1fabd59b42b8bb6d9b7d5e0845b5&pvs=4" target="_blank" title="Groceries" aria-label="Open the groceries list template in a new tab.">groceries</a>)
         </li>
     </ul>
-
-    <p><a href="https://medium.com/@dmtors" target="_blank" title="Medium" aria-label="Visit Derek Torsani on Medium in a new tab.">more writing</a></p>
 
     <h2>playlists (spotify) _</h2>
 
