--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <ul>
         <li>
-            seeds, ambient jazz, 2021
+            seeds, ambient jazz, 2021, <a href="https://elasticstage.com/derektorsani/releases/seeds-album" target="_blank" title="Vinyl" aria-label="Purchase Seeds by Derek Torsani on vinyl in a new tab.">vinyl</a>
             <iframe src="https://bandcamp.com/EmbeddedPlayer/album=1048797745/size=large/bgcol=ffffff/linkcol=000000/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://derektorsani.bandcamp.com/album/seeds">Seeds by Derek Torsani</a></iframe>
         </li>
         <li>
