--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         </li>
         <li>
             dreamy, riffy ballads,
-            (<a href="https://open.spotify.com/playlist/2ky7dOf9nr8tkZmJH0C5zN?si=7ed7d9a32a7e45f5" target="_blank" title="Super Vision" aria-label="Listen to Super Vision in Spotify.">super vision</a>)
+            (<a href="https://open.spotify.com/playlist/2ky7dOf9nr8tkZmJH0C5zN?si=7ed7d9a32a7e45f5" target="_blank" title="X-Ray Vision" aria-label="Listen to X-Ray Vision in Spotify.">xray vision</a>)
         </li>
         <li>
             some comfy covers,
