--- a/index.html
+++ b/index.html
@@ -48,12 +48,16 @@
 
     <ul>
         <li>
-            popup street pizzeria in baltimore,
-            (<a href="bisnoni.html" target="_blank" title="Bisnoni" aria-label="Open Bisnoni in a new tab.">bisnoni</a>)
-        </li>
-        <li>
             fantastical quest for belonging in two parts — book and album,
             (<a href="https://atreelikeme.com" target="_blank" title="A Tree Like Me" aria-label="Open A Tree Like Me in a new tab.">a tree like me</a>)
+        </li>
+        <li>
+            moments in motion on paper,
+            (<a href="gallery.html" target="_blank" title="Gallery of Improvised Drawings" aria-label="Open Gallery of Improvised Drawings in a new tab.">gallery of improvised drawings</a>)
+        </li>
+        <li>
+            popup street pizzeria in baltimore,
+            (<a href="bisnoni.html" target="_blank" title="Bisnoni" aria-label="Open Bisnoni in a new tab.">bisnoni</a>)
         </li>
     </ul>
 
