--- a/gallery.html
+++ b/gallery.html
@@ -35,7 +35,7 @@
         </div> 
         <div>
             <a href="images/pre-improvisation-min.jpg" target="_blank" title="Pre-Improvisation" aria-label="Pre-Improvisation in a new tab."><img src="images/pre-improvisation-min.jpg"/></a>
-            <p>Pre-Improvisation, 2025</p>
+            <p>pre-improvisation, 2025</p>
         </div> 
         <div>
             <a href="images/ashe003-min.jpg" target="_blank" title="Ashe 003" aria-label="Ashe 003 in a new tab."><img src="images/ashe003-min.jpg"/></a>
