--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         }
     </script>
     <audio loop id="atreelikeme" src="audio/atreelikeme.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="atreelikeme-empress" src="audio/atreelikeme-empress.mp3" type="audio/mpeg" preload="auto"></audio>
     <audio loop id="conversationaletchings" src="audio/conversationaletchings.mp3" type="audio/mpeg" preload="auto"></audio>
     <audio loop id="ghost" src="audio/ghost.mp3" type="audio/mpeg" preload="auto"></audio>
     <audio loop id="highland" src="audio/highland.mp3" type="audio/mpeg" preload="auto"></audio>
@@ -53,6 +54,12 @@
         <div>
             <p>First and foremost, my work is founded within my personal values of kindness and humility.</p></br>
             <p>"Let's change the way we eat, let's change the way we live, and let's change the way we treat each other." —Tupac Shakur, 1992</p>
+        </div>
+        <div>
+            <a href="https://youtu.be/jLaT8MHjsio?si=TaQ-Lgsp2tBaBO0q" target="_blank" title="A Tree Like Me" aria-label="Open A Tree Like Me in a new tab."><img src="images/atreelikeme-empress.png" onmouseover="playSound('atreelikeme-empress')" onmouseleave="stopSound('atreelikeme-empress')"/></a>
+            <a href="https://youtu.be/jLaT8MHjsio?si=TaQ-Lgsp2tBaBO0q" target="_blank" title="A Tree Like Me" aria-label="Open A Tree Like Me in a new tab."><i>A Tree Like Me</i></a>
+            <p>NPR Tiny Desk Contest performance</p>
+            <p>2026</p>
         </div>
         <div>
             <a href="https://atreelikeme.com" target="_blank" title="A Tree Like Me" aria-label="Open A Tree Like Me in a new tab."><img src="images/atreelikeme.jpg" onmouseover="playSound('atreelikeme')" onmouseleave="stopSound('atreelikeme')"/></a>
